--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -337,7 +337,7 @@
                     </article>
                     <aside>
                         <div class="sideBanner">
-                            <div class="sideBanner__down bgOrange">
+                            {# <div class="sideBanner__down bgOrange">
                                 <h5 class="h5">
                                     <strong>
                                         Benefits of Robotics 
@@ -364,7 +364,7 @@
                                         <p> Provides opportunity to CREATE through coding </p>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> #}
                         </div>
                         <div class="sideBanner">
                             <div class="sideBanner__up">
