--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -462,7 +462,7 @@
                                                 </a>
                                                 <br>
                                                 <strong style="color:#FE6500">
-                                                    Sold Out
+                                                    Contact Us
                                                 </strong>                                                                                                                                  
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
                                                     Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
@@ -476,7 +476,7 @@
                                                     <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content"> Sign Up</span>
+                                                            <span class="pb-button-content">Contact Us</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -507,7 +507,7 @@
                                                     <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content"> Sign Up</span>
+                                                            <span class="pb-button-content">Contact Us</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -536,7 +536,7 @@
                                                     <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
                                                 >
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content"> Sign Up</span>
+                                                            <span class="pb-button-content">Contact Us</span>
                                                         </span>
                                                     </a>
                                                 </div>
@@ -561,7 +561,7 @@
                                                     <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
                                                     data-id="">
                                                         <span class="pb-button-box">
-                                                            <span class="pb-button-content"> Sign Up</span>
+                                                            <span class="pb-button-content">Contact Us</span>
                                                         </span>
                                                     </a>
                                                 </div>
