--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -567,6 +567,125 @@
                                                 </div>
                                             </td>
                                         </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">TBD</td>
+                                            <td data-title="Time">TBD</td>
+                                            <td data-title="Class">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">
+                                                        <i>
+                                                            My Friends
+                                                        </i>
+                                                            Online
+                                                    </strong>
+                                                </a>
+                                                <br>
+                                                <strong style="color:#FE6500">
+                                                    Contact Us
+                                                </strong>                                                                                                                                  
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>                                            </td>
+                                            <td data-title="Grade level">6th-8th</td>       
+                                            <td data-title="Price">
+                                                TBD									
+                                            </td>
+                                            <td>  
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
+                                                    data-id="">
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content">Contact Us</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">TBD</td>
+                                            <td data-title="Time">TBD</td>
+                                            <td data-title="Class">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" target="_blank" title="My Friends Online" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">
+                                                        <i>
+                                                            My Friends
+                                                        </i>
+                                                            Online
+                                                    </strong>
+                                                </a>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>
+                                            </td>
+                                            <td data-title="Grade level">6th-8th</td>
+                                            <td data-title="Price">
+                                                TBD									
+                                            </td>
+                                            <td>
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/myfriend.html" class="pb-window-target-self" 
+                                                    data-id="">
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content">Contact Us</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">TBD</td>
+                                            <td data-title="Time">TBD</td>
+                                            <td data-title="Class">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" 
+                                                target="_blank" title="Private Class" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">
+                                                        Private Class 
+                                                    </strong>
+                                                 </a>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>
+                                            </td>
+                                            <td data-title="Grade level">6th-8th</td>
+                                            <td data-title="Price">
+                                                TBD	
+                                            </td>
+                                            <td>
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
+                                                >
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content">Contact Us</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td data-title="Session Dates">TBD</td>
+                                            <td data-title="Time">TBD</td>
+                                            <td data-title="Class">
+                                                <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" target="_blank" title="Private Class" style="text-decoration: none">
+                                                    <strong class="class-name" style="color: #4ccef0;">Private Class </strong>
+                                                </a>
+                                                <div style="font-size: 12px; color: #707070; font-weight: bold;">
+                                                    Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
+                                                </div>                                            </td>
+                                            <td data-title="Grade level">6th-8th</td>
+                                            <td data-title="Price">
+                                                TBD									
+                                            </td>
+                                            <td>
+                                                <div class="pb-button pb-button-size-small">
+                                                    <a href="https://shust-hub.github.io/CA/templates/page/privateclasses.html" class="pb-window-target-self" 
+                                                    data-id="">
+                                                        <span class="pb-button-box">
+                                                            <span class="pb-button-content">Contact Us</span>
+                                                        </span>
+                                                    </a>
+                                                </div>
+                                            </td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
