--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -725,7 +725,7 @@
                         <div id="SpringSchedule">                     
                             <div class="accordeon" >
                                 <h4 class="h4">
-                                    Daily (M-F) 2 hours each day (1 week) —
+                                    Daily (M-F): 1 hour each day (2 weeks)) —
             
                                     <!-- {% set minOneWeek = 99999999999 %}
                                     {% for item in oneWeek %}
@@ -2282,7 +2282,7 @@
                         <div id="CampsSchedule">
                             <div class="accordeon">
                                 <h4 class="h4">
-                                    Daily (M-F) 2 hours each day (2 weeks) — 
+                                    Daily (M-F): 2 hours each day (1 week) — 
 
                                     <!-- {% set minTwoWeek = 99999999999 %}
                                     {% for item in twoWeek %}
@@ -3839,7 +3839,7 @@
                         <!-- {% if sections %} -->
                         <div>
                             <div class="accordeon">
-                                <h4 class="h4">Weekly 2 hours each day (8 weeks) —  
+                                <h4 class="h4">Weekly: 1 hour once a week (8 weeks) —  
 
                                 <!-- {% set minSections = 99999999999 %}
                                 {% for item in sections %}
