--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -556,8 +556,13 @@
                     <article>
                         <h2 class="h2">Learn About Our Online Coding Classes and Levels </h2>
                         <p class="mb-middle">
+                            <strong>
                             Browse our class offerings by grade level. 
-                            Or you can jump directly to our <a href="">Online Coding Class Schedules & Registration</a>, or <a href="">Find Out What Sets CodeAdvantage Online Coding Classes Apart</a>
+                            Or you can jump directly to our <a href="#">Online Coding Class Schedules & Registration</a>, or <a href="#">Find Out What Sets CodeAdvantage Online Coding Classes Apart</a>
+                            </strong>
+                        </p>
+                        <p>
+                            Already took Level 1? Check out  <a href="#"></a>Level 2 and 3 classes </a>
                         </p>
 
                         <h4 class="h4">Classes for K-2nd grades </h4>
@@ -712,7 +717,7 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="onlineCalendar">
             <div class="container">
                 <div class="rows">
                     <img class="size-medium divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
