--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -560,8 +560,7 @@
                             Browse our class offerings by grade level. 
                             Or you can jump directly to our <a href="#">Online Coding Class Schedules & Registration</a>, or <a href="#">Find Out What Sets CodeAdvantage Online Coding Classes Apart</a>
                             </strong>
-                        </p>
-                        <p>
+                            <br>
                             Already took Level 1? Check out  <a href="#"></a>Level 2 and 3 classes</a>
                         </p>
 
@@ -725,8 +724,8 @@
                 <div class="rows">
                     <article>
                         <h2 class="h2">Online Coding Camp/Class Schedules & Registration</h2>
-                        <p>
-                            Already took Level 1? Check out  <a href="#"></a>Level 2 and 3 classes</a>
+                        <p class="mb-middle">
+                            Already took Level 1? Check out  <a href="#">Level 2 and 3 classes</a>
                         </p>
                 
                         <!-- {% if oneWeek %} -->
