online  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -89,7 +89,7 @@
                         <ul style="height: 79px;" id="menu-code-advantage-menu" class="sf-menu pb-reset-list pb-clear-fix">
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/online-coding-classes-for-kids"><span></span>Classes</a>
+                    <a href="/online-coding-classes-for-kids"><span></span>Online Classes</a>
                     <ul style="display: flex; width: max-content;">
                     <diV>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
@@ -560,8 +560,9 @@
                             Browse our class offerings by grade level. 
                             Or you can jump directly to our <a href="#">Online Coding Class Schedules & Registration</a>, or <a href="#">Find Out What Sets CodeAdvantage Online Coding Classes Apart</a>
                             </strong>
-                            <br>
-                            Already took Level 1? Check out  <a href="#"></a>Level 2 and 3 classes</a>
+                        </p>
+                        <p>
+                            Already took Level 1? Check out  <a href="#">Level 2 and 3 classes</a>
                         </p>
 
                         <h4 class="h4">Classes for K-2nd grades </h4>
