online  page fix

--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -733,7 +733,7 @@
                         <div id="SpringSchedule">                     
                             <div class="accordeon" >
                                 <h4 class="h4">
-                                    Daily (M-F): 1 hour each day (2 weeks)) —
+                                    Daily (M-F): 1 hour each day (2 weeks) —
             
                                     <!-- {% set minOneWeek = 99999999999 %}
                                     {% for item in oneWeek %}
