online  page fix

--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -439,7 +439,7 @@
                                 <table style="width: 100%;" class="table table-responsive">
                                     <thead>
                                         <tr>
-                                            <th>Session Dates</th>
+                                            <th style="max-width: 280px;">Session Dates</th>
                                             <th>Time</th>
                                             <th>Class</th>
                                             <th>Grade level</th>
@@ -459,11 +459,7 @@
                                                         </i>
                                                             Online
                                                     </strong>
-                                                </a>
-                                                <br>
-                                                <strong style="color:#FE6500">
-                                                    Contact Us
-                                                </strong>                                                                                                                                  
+                                                </a>                                                                                                                               
                                                 <div style="font-size: 12px; color: #707070; font-weight: bold;">
                                                     Required: <a href="https://education.lego.com/en-us/products/lego-education-wedo-2-0-core-set/45300" title="Lego WEDO 2.0 kit"  target="_blank">Lego WEDO 2.0 kit </a>
                                                 </div>                                            </td>
