--- a/templates/page/onlinerobotics.html
+++ b/templates/page/onlinerobotics.html
@@ -434,12 +434,12 @@
                 </div>
                 <div class="rows">
                     <article>
-                        <div class="pb-text" id="CampsSchedule">
+                        <div class="pb-text" id="roboticsTable">
                                 <div id="responsiveTable">
                                 <table style="width: 100%;" class="table table-responsive">
                                     <thead>
                                         <tr>
-                                            <th style="max-width: 280px;">Session Dates</th>
+                                            <th style="max-width: 150px;">Session Dates</th>
                                             <th>Time</th>
                                             <th>Class</th>
                                             <th>Grade level</th>
