--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -245,6 +245,16 @@
           }
     }
 }
+
+#roboticsTable{
+    .table td, .table th {
+        @media only screen and (min-width: 801px){
+            text-align: center!important;
+        }
+    }
+}
+
+
 ////////////////////////////////////////////////
 .filterTable{
     position: relative;
@@ -292,3 +302,4 @@
     top: 0px;
     left: 165px;
 }
+
