--- a/css/tableFilter.css
+++ b/css/tableFilter.css
@@ -272,6 +272,12 @@
   }
 }
 
+@media only screen and (min-width: 801px) {
+  #roboticsTable .table td:nth-child(3), #roboticsTable .table th:nth-child(3) {
+    text-align: center !important;
+  }
+}
+
 .filterTable {
   position: relative;
   margin-bottom: 10px;
