--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -254,7 +254,7 @@
     }
     .table td:nth-child(3), .table th:nth-child(3) {
         @media only screen and (min-width: 801px){
-            text-align: center!important;
+            text-align: left!important;
         }
     }
 }
