--- a/css/tableFilter.css
+++ b/css/tableFilter.css
@@ -275,7 +275,7 @@
 @media only screen and (min-width: 801px) {
   #roboticsTable .table td:nth-child(3), #roboticsTable .table th:nth-child(3) {
     text-align: left !important;
-    padding-left: 50px !important;
+    padding: 0 50px !important;
   }
 }
 
