online  page fix

--- a/templates/page/newtrial.html
+++ b/templates/page/newtrial.html
@@ -325,7 +325,10 @@
                             </p>
                         </strong>
                         <p> 
-                            Your child will take a mini coding lesson with a group and a LIVE instructor. They will also be shown a variety of different coding languages appropriate for their grade level. After your child’s trial is completed, you will receive a coupon for $10 off your first CodeAdvantage online coding class. Our classes start at $165 for ten hours of LIVE instruction!
+                            Your child will take a mini coding lesson with a group and a LIVE instructor. 
+                            They will also be shown a variety of different coding languages appropriate for their 
+                            grade level. After your child’s trial is completed, you will receive a coupon for $10 
+                            off your first CodeAdvantage online coding class. Our classes start at $195 for ten hours of LIVE instruction!
 
                         </p>
 
