online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -89,10 +89,10 @@
                         <ul style="height: 79px;" id="menu-code-advantage-menu" class="sf-menu pb-reset-list pb-clear-fix">
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/online-coding-classes-for-kids"><span></span>Classes</a>
+                    <a href="/online-coding-classes-for-kids"><span></span>Online Classes</a>
                     <ul style="display: flex; width: max-content;">
                     <diV>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/online-coding-classes-for-kids">Online Coding for Kids</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
@@ -112,9 +112,22 @@
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/online/intermediate-coding"><span></span>Scratch</a>
-                        </li>
+                        </li> -->
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Online Coding for Kids</a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://www.codeadvantage.org/classes/grades"><span></span>Classes by Grade</a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://www.codeadvantage.org/classes/age"><span></span> Classes by Age </a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Take a Free Trial </a>
+                        </li> 
+
                     </div>    
-                    <div>
+                    <!-- <div>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/online/minecraft-club"><span></span>Minecraft Club</a>
                         </li>
@@ -136,7 +149,7 @@
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/online-trial-coding-classes-for-kids"><span></span>Take A Trial Class</a>
                         </li>
-                    </div>
+                    </div> -->
                     </ul>
                 </li>
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
@@ -167,10 +180,10 @@
                             <a href="/about/why-coding"><span></span>Why Coding?</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/about/join-the-team"><span></span>Join the Team</a>
+                            <a href="https://www.codeadvantage.org/contact/program-director"><span></span>After School Program Directors</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/about/faq"><span></span>FAQ</a>
+                            <a href="/about/join-the-team"><span></span>Join the Team</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/coding-for-kids-blog"><span></span>Our Coding Blog</a>
@@ -181,7 +194,7 @@
                     <a href="/contact"><span></span>Contact</a>
                 </li>
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
-                    <a href="#"><span></span>Free Trial!</a>
+                    <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Free Trial!</a>
                 </li>
             </ul>
         </div>
@@ -193,9 +206,21 @@
                 <div id="pb_menu_responsive_329AE32EDE8E62CD52ACFDC02FC60D94">
                     <ul>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
-                            <a href="/online-coding-classes-for-kids">Classes</a>
+                            <a href="/online-coding-classes-for-kids">Online Classes</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">-- Online Coding for Kids</a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://www.codeadvantage.org/classes/grades"> -- Classes by Grade</a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://www.codeadvantage.org/classes/age"> -- Classes by Age </a>
+                        </li> 
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
+                            <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">  -- Take a Free Trial </a>
+                        </li> 
+                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/online-coding-classes-for-kids">-- Online Coding for Kids</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
@@ -236,7 +261,7 @@
                         </li>
                          <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/special-offers">-- Special Offers</a>
-                        </li>
+                        </li> -->
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page">
                             <a href="/school-programs"> <i>My Friends</i>  Online</a>
                         </li>
@@ -262,7 +287,7 @@
                             <a href="/about/join-the-team">-- Join the Team</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/about/faq">-- FAQ</a>
+                            <a href="https://www.codeadvantage.org/contact/program-director">-- After School Program Directors</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/coding-for-kids-blog">-- Our Blog</a>
