--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -760,7 +760,6 @@
         <div class="theme-main theme-layout-25x25x25x25">
             <div id="text-31" class="widget_text theme-clear-fix theme-widget theme-layout-column-left">			<div class="textwidget"><div style="color: white; font-size: 80%;">Phone: 833.210.CODE<br />
                         Email: office@codeadvantage.org<br>Copyright © 2015-2020<br />CodeAdvantage®<br />
-                        <a style="font-size: 100%;" href="/private-classes">Private Classes</a><br />
                         <a style="font-size: 100%;" href="/contact">Contact us</a><br />
                         <br />
                         <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
@@ -772,26 +771,57 @@
             <div id="text-12" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-left">
                 <div class="textwidget">
                     <div style="color: white; line-height: 1.5em;">
-                        <a style="font-size: 80%;" href="/about">About</a><br />
-                        <a style="font-size: 80%;" href="/classes">Classes</a><br />
-                        <a style="font-size: 80%;" href="/school-programs">School Programs</a><br />
-                        <a style="font-size: 80%;" href="/private-classes">Private Classes</a><br />
-                        <a style="font-size: 80%;" href="/online-coding-classes-for-kids">Online Coding Classes</a><br />
-                        <a style="font-size: 80%;" href="/about/join-the-team">Join Our Team</a><br />
-                        <a style="font-size: 80%;" href="/contact/program-director">Program Director</a><br />
-                        <a style="font-size: 80%;" href="/coding-champion">Coding Champion</a><br />
-                        <a style="font-size: 80%;" href="/about/faq">FAQ</a><br />
-                        <a style="font-size: 80%;" href="/about/why-coding">Why Coding?</a><br />
-                        <a style="font-size: 80%;" href="/about/press">Press</a><br />
-                        <a style="font-size: 80%;" href="/coding-for-kids-blog">Our Coding Blog</a><br />
-                        <a style="font-size: 80%;" href="/terms-and-conditions">Terms and Conditions</a><br>
-                        <a style="font-size: 80%;" href="/privacy-policy">Privacy Policy</a>
+                        <a style="font-size: 80%;" href="/online/scratch-jr">Scratch Jr</a>
+                        <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a>
+                        <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a>
+                        <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a>
+
+                        <a style="font-size: 80%;" href="/online/intermediate-coding">Scratch</a>
+                        <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a>
+                        <a style="font-size: 80%;" href="/online/web-development">Web Development</a>
+                        <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a>
+                        <a style="font-size: 80%;" href="/online/minecraft-java-mods">Minecraft Java Mods</a>
+                        <a style="font-size: 80%;" href="https://shust-hub.github.io/CA/templates/page/onlinerobotics.html">Robotics</a>
+                        <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a>
+                        <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a>
+                        <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a>
+
+                        <a style="font-size: 80%;" href="/online/web-development">Web Development</a>
+                        <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a>
+                        <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a>
+                        <a style="font-size: 80%;" href="/online/minecraft-modding-java">Minecraft Modding: Java</a>
+                        <a style="font-size: 80%;" href="https://shust-hub.github.io/CA/templates/page/onlinerobotics.html">Robotics</a>
+
                     </div>
                 </div>
             </div>
-            <div id="text-32" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-right">			<div class="textwidget"><div style="color: white; font-size: 80%;"><a href="/location/upper-east-side">Upper East Side, NYC.</a> <a href="/location/upper-west-side">Upper West Side, NYC.</a> <a href="/location/manhattan">Manhattan, NY.</a> <a href="/location/brooklyn">Brooklyn, NY.</a> <a href="/location/queens">Queens, NY.</a> <a href="/location/westchester">Westchester, NY.</a> <a href="/location/scarsdale">Scarsdale, NY.</a> <a href="/location/yonkers">Yonkers, NY.</a> <a href="/location/rye">Rye, NY.</a> <a href="/location/new-rochelle">New Rochelle, NY.</a> <a href="/location/larchmont">Larchmont, NY.</a> <a href="/location/mamaroneck">Mamaroneck, NY.</a> <a href="/location/summit">Summit, NJ.</a> <a href="/location/short-hills">Short Hills, NJ.</a> <a href="/location/milburn">Milburn, NJ.</a> <a href="/location/hoboken">Hoboken, NJ.</a> <a href="/location/jersey-city">Jersey City, NJ.</a> <a href="/location/engelwood">Engelwood, NJ.</a> <a href="/location/livingston">Livingston, NJ.</a> <a href="/location/ridgewood">Ridgewood, NJ.</a> <a href="/location/paramus">Paramus, NJ.</a></div>
+            <div id="text-32" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-right">			
+                <div class="textwidget">
+                    <div class="textwidget">
+                        <div style="color: white; line-height: 1.5em;">
+                            <a style="font-size: 80%;" href="/about">About</a><br />
+                            <a style="font-size: 80%;" href="/classes">Classes</a><br />
+                            <a style="font-size: 80%;" href="/school-programs">School Programs</a><br />
+                            <a style="font-size: 80%;" href="/private-classes">Private Classes</a><br />
+                            <a style="font-size: 80%;" href="/online-coding-classes-for-kids">Online Coding Classes</a><br />
+                            <a style="font-size: 80%;" href="/about/join-the-team">Join Our Team</a><br />
+                            <a style="font-size: 80%;" href="/contact/program-director">Program Director</a><br />
+                            <a style="font-size: 80%;" href="/coding-champion">Coding Champion</a><br />
+                            <a style="font-size: 80%;" href="/private-classes">Private Classes</a><br />
+                            <a style="font-size: 80%;" href="/school-programs">After School</a><br />
+                            <a style="font-size: 80%;" href="/about/faq">FAQ</a><br />
+                            <a style="font-size: 80%;" href="/about/why-coding">Why Coding?</a><br />
+                            <a style="font-size: 80%;" href="/about/press">Press</a><br />
+                            <a style="font-size: 80%;" href="/coding-for-kids-blog">Our Coding Blog</a><br />
+                            <a style="font-size: 80%;" href="/terms-and-conditions">Terms and Conditions</a><br>
+                            <a style="font-size: 80%;" href="/privacy-policy">Privacy Policy</a>
+                        </div>
+                    </div>
                 </div>
-            </div><div id="text-33" class="widget_text theme-clear-fix theme-widget theme-layout-column-right">			<div class="textwidget"><div style="color: white; font-size: 80%;"><a href="/location/montclair">Montclair, NJ.</a> <a href="/location/new-brunswick">New Brunswick, NJ.</a> <a href="/location/princeton">Princeton, NJ.</a> <a href="/location/alexandria">Alexandria, VA.</a> <a href="/location/loudoun">Loudoun, VA.</a> <a href="/location/mclean">McLean, VA.</a> <a href="/location/falls-church">Falls Church, VA.</a> <a href="/location/arlington">Arlington, VA.</a> <a href="/location/fairfax">Fairfax, VA.</a> <a href="/location/oakton">Oakton, VA.</a> <a href="/location/vienna">Vienna, VA.</a> <a href="/location/ashburn">Ashburn, VA.</a> <a href="/location/washington">Washington DC.</a> <a href="/location/nw-washington">NW Washington DC.</a> <a href="/location/se-washington">SE Washington DC.</a> <a href="/location/rockville">Rockville, MD.</a> <a href="/location/potomac">Potomac, MD.</a> <a href="/location/montgomery">Montgomery, MD.</a> <a href="/location/bethesda">Bethesda, MD.</a> <a href="/location/sandy-spring">Sandy Spring, MD.</a> <a href="/location/cheverly">Cheverly, MD.</a></div>
+            </div>
+            <div id="text-33" class="widget_text theme-clear-fix theme-widget theme-layout-column-right">			
+                <div class="textwidget"><div style="color: white; font-size: 80%;"><a href="/location/montclair">Montclair, NJ.</a> <a href="/location/new-brunswick">New Brunswick, NJ.</a> <a href="/location/princeton">Princeton, NJ.</a> <a href="/location/alexandria">Alexandria, VA.</a> <a href="/location/loudoun">Loudoun, VA.</a> <a href="/location/mclean">McLean, VA.</a> <a href="/location/falls-church">Falls Church, VA.</a> <a href="/location/arlington">Arlington, VA.</a> <a href="/location/fairfax">Fairfax, VA.</a> <a href="/location/oakton">Oakton, VA.</a> <a href="/location/vienna">Vienna, VA.</a> <a href="/location/ashburn">Ashburn, VA.</a> <a href="/location/washington">Washington DC.</a> <a href="/location/nw-washington">NW Washington DC.</a> <a href="/location/se-washington">SE Washington DC.</a> <a href="/location/rockville">Rockville, MD.</a> <a href="/location/potomac">Potomac, MD.</a> <a href="/location/montgomery">Montgomery, MD.</a> <a href="/location/bethesda">Bethesda, MD.</a> <a href="/location/sandy-spring">Sandy Spring, MD.</a> <a href="/location/cheverly">Cheverly, MD.</a> <a href="/location/upper-east-side">Upper East Side, NYC.</a> <a href="/location/upper-west-side">Upper West Side, NYC.</a> <a href="/location/manhattan">Manhattan, NY.</a> <a href="/location/brooklyn">Brooklyn, NY.</a> <a href="/location/queens">Queens, NY.</a> <a href="/location/westchester">Westchester, NY.</a> <a href="/location/scarsdale">Scarsdale, NY.</a> <a href="/location/yonkers">Yonkers, NY.</a> <a href="/location/rye">Rye, NY.</a> <a href="/location/new-rochelle">New Rochelle, NY.</a> <a href="/location/larchmont">Larchmont, NY.</a> <a href="/location/mamaroneck">Mamaroneck, NY.</a> <a href="/location/summit">Summit, NJ.</a> <a href="/location/short-hills">Short Hills, NJ.</a> <a href="/location/milburn">Milburn, NJ.</a> <a href="/location/hoboken">Hoboken, NJ.</a> <a href="/location/jersey-city">Jersey City, NJ.</a> <a href="/location/engelwood">Engelwood, NJ.</a> <a href="/location/livingston">Livingston, NJ.</a> <a href="/location/ridgewood">Ridgewood, NJ.</a> <a href="/location/paramus">Paramus, NJ.</a></div>
+ </div>
                     <div><a style="font-size: 80%;" href="/all-locations">All Locations</a></div>
                 </div>
             </div>						</div>
