online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -771,11 +771,13 @@
             <div id="text-12" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-left">
                 <div class="textwidget">
                     <div style="color: white; line-height: 1.5em;">
+                        <p style="font-size: 80%;">K-2nd</p> <br>
                         <a style="font-size: 80%;" href="/online/scratch-jr">Scratch Jr</a>
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a>
                         <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a>
 
+                        <p style="font-size: 80%;">K-2nd</p> <br>
                         <a style="font-size: 80%;" href="/online/intermediate-coding">Scratch</a>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a>
@@ -786,6 +788,7 @@
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a>
 
+                        <p style="font-size: 80%;">K-2nd</p> <br>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a>
                         <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a>
