--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -777,7 +777,7 @@
                         <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <span style="font-size: 80%;">K-2nd</span> <br>
+                        <span style="font-size: 80%; margin: 5px 10px;">3rd-5nd</span> <br>
                         <a style="font-size: 80%;" href="/online/intermediate-coding">Scratch</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
@@ -788,7 +788,7 @@
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <span style="font-size: 80%;">K-2nd</span> <br>
+                        <span style="font-size: 80%; margin: 5px 10px;">6th- 8th</span> <br>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
                         <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
