online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -771,13 +771,13 @@
             <div id="text-12" class="widget_text theme-clear-fix theme-widget theme-layout-column-center-left">
                 <div class="textwidget">
                     <div style="color: white; line-height: 1.5em;">
-                        <p style="font-size: 80%; padding: 0 0 5px;">K-2nd</p> <br>
+                        <p style="font-size: 80%; padding: 0 0 5px;">K-2nd</p> 
                         <a style="font-size: 80%;" href="/online/scratch-jr">Scratch Jr</a><br>
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a><br>
                         <a style="font-size: 80%;" href="/online/intro-to-coding">3D Video Game Design</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <p style="font-size: 80%; padding: 10px 0 5px;">3rd-5nd</p> <br>
+                        <p style="font-size: 80%; padding: 10px 0 5px;">3rd-5nd</p> 
                         <a style="font-size: 80%;" href="/online/intermediate-coding">Scratch</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
@@ -788,7 +788,7 @@
                         <a style="font-size: 80%;" href="/online/minecraft-club">Minecraft Club</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-build">Roblox Build</a><br>
 
-                        <p style="font-size: 80%; padding: 10px 0 5px;">6th- 8th</p> <br>
+                        <p style="font-size: 80%; padding: 10px 0 5px;">6th- 8th</p> 
                         <a style="font-size: 80%;" href="/online/web-development">Web Development</a><br>
                         <a style="font-size: 80%;" href="/online/advanced-coding">Design with Python</a><br>
                         <a style="font-size: 80%;" href="/online/roblox-code">Roblox Code</a><br>
@@ -810,8 +810,6 @@
                             <a style="font-size: 80%;" href="/about/join-the-team">Join Our Team</a><br />
                             <a style="font-size: 80%;" href="/contact/program-director">Program Director</a><br />
                             <a style="font-size: 80%;" href="/coding-champion">Coding Champion</a><br />
-                            <a style="font-size: 80%;" href="/private-classes">Private Classes</a><br />
-                            <a style="font-size: 80%;" href="/school-programs">After School</a><br />
                             <a style="font-size: 80%;" href="/about/faq">FAQ</a><br />
                             <a style="font-size: 80%;" href="/about/why-coding">Why Coding?</a><br />
                             <a style="font-size: 80%;" href="/about/press">Press</a><br />
