online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="/CA/css/tooltipster/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-shadow.min.css">
     <link rel="stylesheet" href="/CA/css/styles.css" type='text/css'>
 
-
     <!--n2css-->
     <script type='text/javascript' src='/CA/js/jquery.js'></script>
     <script type='text/javascript' src='/CA/js/jquery-migrate.min.js'></script>
@@ -71,6 +70,7 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
+            <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">Free Trial!</a>
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
@@ -78,7 +78,7 @@
 <div class="pb-menu pb pb-menu-template-type-1" id="pb_menu_1356D2CB2EB1BA9E744C3D62316D6262">
     <div class="pb-main pb-clear-fix">
         <div class="pb-logo">
-
+            
             <a href="/" title="CodeAdvantage ">
                 <img src="/CA/images/logor.png" alt="CodeAdvantage "/>
             </a>
@@ -92,27 +92,6 @@
                     <a href="/online-coding-classes-for-kids"><span></span>Online Classes</a>
                     <ul style="display: flex; width: max-content;">
                     <diV>
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online-coding-classes-for-kids">Online Coding for Kids</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/summer-online-coding-camps-for-kids"><span></span>Summer Online Coding Camps</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/intro-to-coding"><span></span>3D Video Game Design</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/advanced-coding"><span></span>Design with Python</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/web-development"><span></span>Web Development</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/scratch-jr"><span></span>Scratch Jr</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/intermediate-coding"><span></span>Scratch</a>
-                        </li> -->
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Online Coding for Kids</a>
                         </li> 
@@ -125,31 +104,7 @@
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Take a Free Trial </a>
                         </li> 
-
                     </div>    
-                    <!-- <div>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-club"><span></span>Minecraft Club</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-java-mods"><span></span>Minecraft Java Mods</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-modding-java"><span></span>Minecraft Modding: Java</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/roblox-build"><span></span>Roblox Build</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/roblox-code"><span></span>Roblox Code</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/special-offers"><span></span>Special Offers</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online-trial-coding-classes-for-kids"><span></span>Take A Trial Class</a>
-                        </li>
-                    </div> -->
                     </ul>
                 </li>
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
@@ -193,9 +148,9 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="/contact"><span></span>Contact</a>
                 </li>
-                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
+                <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
                     <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html"><span></span>Free Trial!</a>
-                </li>
+                </li> -->
             </ul>
         </div>
         <div class="submenuWrapper">
@@ -220,48 +175,6 @@
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">  -- Take a Free Trial </a>
                         </li> 
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online-coding-classes-for-kids">-- Online Coding for Kids</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/summer-online-coding-camps-for-kids">-- Summer Online Coding Camps</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/intro-to-coding">-- 3D Video Game Design</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/advanced-coding">-- Design with Python</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/web-development">-- Web Development</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online-trial-coding-classes-for-kids">-- Take A Trial Class</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-club">-- Minecraft Club</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/intermediate-coding">-- Scratch</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/scratch-jr">-- Scratch Jr</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/roblox-build">-- Roblox Build</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/roblox-code">-- Roblox Code</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-java-mods">-- Minecraft Java Mods</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/online/minecraft-modding-java">-- Minecraft Modding: Java</a>
-                        </li>
-                         <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/special-offers">-- Special Offers</a>
-                        </li> -->
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page">
                             <a href="/school-programs"> <i>My Friends</i>  Online</a>
                         </li>
