online  page fix

--- a/css/style7.css
+++ b/css/style7.css
@@ -3677,7 +3677,7 @@ span {
 .submenuWrapper .submenuLink {
   text-align: center;
   text-decoration: none;
-  padding-left: 20px;
+  padding-right: 20px;
   color: #8b8b8b;
   font-size: 15px;
 }
@@ -4747,20 +4747,13 @@ aside {
   color: #FE6500;
 }
 
-.menu-item-special a {
-  color: #eb6f61 !important;
-  background-color: #fff !important;
-  font-weight: bold !important;
+.menu-item-special {
+  color: #eb6f61;
+  font-weight: bold;
 }
 
 .menu-item-special:hover {
-  color: #4ccef0 !important;
-  background-color: #fff !important;
-}
-
-.menu-item-special a:hover {
-  color: #4ccef0 !important;
-  background-color: #fff !important;
+  color: #4ccef0;
 }
 
 #privateClassesPage .rows {
