online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -70,7 +70,7 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
-            <a class="submenuLink" href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">Free Trial!</a>
+            <a class="submenuLink menu-item-special" href="https://shust-hub.github.io/CA/templates/page/onlinenew.html">Free Trial!</a>
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
