--- a/css/style7.scss
+++ b/css/style7.scss
@@ -717,6 +717,7 @@ div.theme-footer-top .pb-testimonial ul>li>div>div.pb-testimonial-cite-up,
     min-width: 100px;
     text-align: center;
     box-sizing: border-box;
+    margin-right: 21px;
 }
 .submenuWrapper .portalBtn:hover{
   background-color: #fe6500;
@@ -1692,7 +1693,7 @@ aside {
   
 
   .menu-item-special{
-    color:  #eb6f61;
+    color:  #eb6f61!important;
     font-weight: bold;
   }
 
